# lxqt-admin

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  README.md  lxqt-admin-time.ts  lxqt-admin-time_ar.ts  lxqt-admin-time_ca.ts  lxqt-admin-time_cs.ts  lxqt-admin-time_da.ts  lxqt-admin-time_de.ts  lxqt-admin-time_el.ts  lxqt-admin-time_es.ts  lxqt-admin-time_fr.ts  lxqt-admin-time_hr.ts  lxqt-admin-time_hu.ts  lxqt-admin-time_id.ts  lxqt-admin-time_it.ts  lxqt-admin-time_ja.ts  lxqt-admin-time_lt.ts  lxqt-admin-time_lv.ts  lxqt-admin-time_nl.ts  lxqt-admin-time_pl.ts  lxqt-admin-time_pt.ts  lxqt-admin-time_ru.ts  lxqt-admin-time_tr.ts  lxqt-admin-time_uk.ts  lxqt-admin-time_zh_CN.ts  lxqt-admin-user.ts  lxqt-admin-user_ar.ts  lxqt-admin-user_ca.ts  lxqt-admin-user_cs.ts  lxqt-admin-user_da.ts  lxqt-admin-user_de.ts  lxqt-admin-user_el.ts  lxqt-admin-user_es.ts  lxqt-admin-user_fr.ts  lxqt-admin-user_hr.ts  lxqt-admin-user_hu.ts  lxqt-admin-user_id.ts  (+11 more)
lxqt-admin-time/: CMakeLists.txt  datetime.cpp  datetime.h  datetime.ui  dbustimedatectl.cpp  dbustimedatectl.h  fbsdtimedatectl.cpp  fbsdtimedatectl.h  itimedatectl.cpp  itimedatectl.h  lxqt-admin-time-helper.freebsd  lxqt-admin-time-helper.nosystemd  lxqt-admin-time.desktop.0.in  lxqt-admin-time.desktop.in  main.cpp  nosdtimedatectl.cpp  nosdtimedatectl.h  org.lxqt.lxqt-admin-time.policy  org.lxqt.lxqt-admin-time.policy.nosd  org.lxqt.lxqt-admin-time.policy.nosd.in  timeadmindialog.cpp  timeadmindialog.h  timeadmindialog.ui  timedatectl.cpp  timedatectl.h  timezone.cpp  timezone.h  timezone.ui
lxqt-admin-time/translations/: lxqt-admin-time-it.desktop  lxqt-admin-time.ts  lxqt-admin-time_ar.desktop  lxqt-admin-time_ar.desktop.yaml  lxqt-admin-time_ar.ts  lxqt-admin-time_arn.ts  lxqt-admin-time_ast.ts  lxqt-admin-time_bg.desktop.yaml  lxqt-admin-time_bg.ts  lxqt-admin-time_ca.desktop  lxqt-admin-time_ca.desktop.yaml  lxqt-admin-time_ca.ts  lxqt-admin-time_cs.desktop  lxqt-admin-time_cs.desktop.yaml  lxqt-admin-time_cs.ts  lxqt-admin-time_cy.ts  lxqt-admin-time_da.desktop  lxqt-admin-time_da.desktop.yaml  lxqt-admin-time_da.ts  lxqt-admin-time_de.desktop  lxqt-admin-time_de.desktop.yaml  lxqt-admin-time_de.ts  lxqt-admin-time_el.desktop  lxqt-admin-time_el.desktop.yaml  lxqt-admin-time_el.ts  lxqt-admin-time_en_GB.desktop.yaml  lxqt-admin-time_en_GB.ts  lxqt-admin-time_es.desktop  lxqt-admin-time_es.desktop.yaml  lxqt-admin-time_es.ts  lxqt-admin-time_et.desktop.yaml  lxqt-admin-time_et.ts  lxqt-admin-time_eu.desktop.yaml  lxqt-admin-time_eu.ts  lxqt-admin-time_fi.desktop.yaml  lxqt-admin-time_fi.ts  lxqt-admin-time_fr.desktop  lxqt-admin-time_fr.desktop.yaml  lxqt-admin-time_fr.ts  lxqt-admin-time_gl.desktop.yaml  (+73 more)
lxqt-admin-user/: CMakeLists.txt  groupdialog.cpp  groupdialog.h  groupdialog.ui  groupmanagerdialog.cpp  groupmanagerdialog.h  groupmanagerdialog.ui  lxqt-admin-user-helper  lxqt-admin-user-helper.default  lxqt-admin-user-helper.freebsd  lxqt-admin-user.desktop.in  main.cpp  maindialog.cpp  maindialog.h  maindialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  misc.cpp  misc.h  org.lxqt.lxqt-admin-user.policy.in  processworker.cpp  processworker.h  system_detect.h.in  taskmanager.cpp  taskmanager.h  userdialog.cpp  userdialog.h  userdialog.ui  usermanager.cpp  usermanager.h
lxqt-admin-user-password/: CMakeLists.txt  changepassworddialog.cpp  changepassworddialog.h  changepassworddialog.ui  main.cpp
lxqt-admin-user-password/translations/: lxqt-admin-user-password.ts
lxqt-admin-user/translations/: CMakeLists.txt  lxqt-admin-user.desktop.yaml  lxqt-admin-user.ts  lxqt-admin-user_ar.desktop  lxqt-admin-user_ar.desktop.yaml  lxqt-admin-user_ar.ts  lxqt-admin-user_arn.ts  lxqt-admin-user_ast.ts  lxqt-admin-user_bg.desktop.yaml  lxqt-admin-user_bg.ts  lxqt-admin-user_ca.desktop  lxqt-admin-user_ca.desktop.yaml  lxqt-admin-user_ca.ts  lxqt-admin-user_cs.desktop  lxqt-admin-user_cs.desktop.yaml  lxqt-admin-user_cs.ts  lxqt-admin-user_cy.ts  lxqt-admin-user_da.desktop  lxqt-admin-user_da.desktop.yaml  lxqt-admin-user_da.ts  lxqt-admin-user_de.desktop  lxqt-admin-user_de.desktop.yaml  lxqt-admin-user_de.ts  lxqt-admin-user_el.desktop  lxqt-admin-user_el.desktop.yaml  lxqt-admin-user_el.ts  lxqt-admin-user_en_GB.ts  lxqt-admin-user_es.desktop  lxqt-admin-user_es.desktop.yaml  lxqt-admin-user_es.ts  lxqt-admin-user_et.desktop.yaml  lxqt-admin-user_et.ts  lxqt-admin-user_eu.desktop.yaml  lxqt-admin-user_eu.ts  lxqt-admin-user_fi.desktop.yaml  lxqt-admin-user_fi.ts  lxqt-admin-user_fr.desktop  lxqt-admin-user_fr.desktop.yaml  lxqt-admin-user_fr.ts  lxqt-admin-user_gl.desktop  (+69 more)
lxqt-sudo/: CMakeLists.txt  communication.cpp  lxqt-sudo.desktop.in  main.cpp  passworddialog.cpp  passworddialog.h
lxqt-sudo/translations/: lxqt-sudo.ts
